--- a/src/pages/testing/test-creation/country-of-registration/country-of-registration.html
+++ b/src/pages/testing/test-creation/country-of-registration/country-of-registration.html
@@ -27,6 +27,13 @@
 <ion-content no-padding class="content-background-color-grey">
 
     <ion-list *ngIf="filteredCountries.length" text-wrap>
+      <button ion-item padding-left detail-none class="list-item-height"
+              (click)="setVehicleRegCountry(notApplicableElem[0])">
+        <h3>{{ notApplicableElem[0].value }}</h3>
+        <ion-icon item-end class="selected"
+                  name="checkmark"
+                  *ngIf="vehicle.countryOfRegistration === notApplicableElem[0].key"></ion-icon>
+      </button>
         <button ion-item padding-left detail-none class="list-item-height no-border"
                 (click)="setVehicleRegCountry(topElem[0])">
             <h3>{{ topElem[0].value }}</h3>
